--- a/src/css/main.css
+++ b/src/css/main.css
@@ -292,3 +292,40 @@ body {
     width: 200px;
   }
 }
+
+.profile-success-message {
+  color: green;
+  margin: 1rem auto;
+  text-align: center;
+  font-weight: 600;
+}
+
+.profile-error-message {
+  color: red;
+  margin: 0.5rem auto;
+  text-align: center;
+}
+
+.profile-edit-save {
+  background: #fff;
+  border: 2px solid #5c2d91;
+  color: #5c2d91;
+  min-width: 160px;
+  font-weight: 600;
+  padding: 0.5rem 1.5rem;
+  cursor: pointer;
+  align-self: flex-end;
+  margin-left: auto;
+}
+
+.profile-edit-cancel {
+  background: #fff;
+  border: 2px solid #5c2d91;
+  color: #5c2d91;
+  min-width: 160px;
+  font-weight: 600;
+  padding: 0.5rem 1.5rem;
+  cursor: pointer;
+  align-self: flex-start;
+  margin-right: auto;
+}
